--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style."
     />
+    <meta name="keywords" content="keyboard test, keyboard layout, QWERTY, Dvorak, Colemak, mechanical keyboard, typing test" />
+    <meta name="author" content="Bryant Welch" />
+    <meta property="og:title" content="Keyboard Test - Compare Keyboard Layouts" />
+    <meta property="og:description" content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://keyboard-test.app" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Keyboard Test - Compare Keyboard Layouts" />
+    <meta name="twitter:description" content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +35,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Keyboard Test</title>
+    <title>Keyboard Test - Compare Keyboard Layouts</title>
+    <link rel="canonical" href="https://keyboard-test.app" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
