--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,41 @@
     />
     <meta name="keywords" content="keyboard test, keyboard layout, QWERTY, Dvorak, Colemak, mechanical keyboard, typing test" />
     <meta name="author" content="Bryant Welch" />
+    <!-- Additional SEO meta tags -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="rating" content="general" />
+    <!-- Structured data for rich results -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Keyboard Test",
+        "description": "Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style.",
+        "url": "https://keyboard-test.app",
+        "applicationCategory": "UtilityApplication",
+        "operatingSystem": "Web",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Bryant Welch"
+        }
+      }
+    </script>
+    <!-- Open Graph tags -->
     <meta property="og:title" content="Keyboard Test - Compare Keyboard Layouts" />
     <meta property="og:description" content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://keyboard-test.app" />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+    <meta property="og:site_name" content="Keyboard Test" />
+    <meta property="og:locale" content="en_US" />
+    <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Keyboard Test - Compare Keyboard Layouts" />
     <meta name="twitter:description" content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style." />
