--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style."
+      content="Interactive keyboard testing application for comparing different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Perform key rollover tests, typing tests, visualize keystrokes, and find your perfect mechanical keyboard."
     />
-    <meta name="keywords" content="keyboard test, keyboard layout, QWERTY, Dvorak, Colemak, mechanical keyboard, typing test" />
+    <meta name="keywords" content="keyboard test, mechanical keyboard, keyboard layout, QWERTY, Dvorak, Colemak, 60% keyboard, 65% keyboard, 75% keyboard, TKL keyboard, full-size keyboard, typing test, key rollover test, keyboard visualization" />
     <meta name="author" content="Bryant Welch" />
     <!-- Additional SEO meta tags -->
     <meta name="robots" content="index, follow" />
@@ -23,7 +23,7 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Keyboard Test",
-        "description": "Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style.",
+        "description": "Interactive keyboard testing application for comparing different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Perform key rollover tests, typing tests, visualize keystrokes, and find your perfect mechanical keyboard.",
         "url": "https://keyboard-test.app",
         "applicationCategory": "UtilityApplication",
         "operatingSystem": "Web",
@@ -35,12 +35,21 @@
         "author": {
           "@type": "Person",
           "name": "Bryant Welch"
-        }
+        },
+        "featureList": [
+          "Multiple keyboard layout types (QWERTY, Dvorak, Colemak)",
+          "Various keyboard sizes (60%, 65%, 75%, TKL, Full)",
+          "Key rollover testing",
+          "Typing speed and accuracy tests",
+          "Real-time keystroke visualization",
+          "Customizable themes",
+          "Keyboard comparison tools"
+        ]
       }
     </script>
     <!-- Open Graph tags -->
-    <meta property="og:title" content="Keyboard Test - Compare Keyboard Layouts" />
-    <meta property="og:description" content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style." />
+    <meta property="og:title" content="Keyboard Test - Interactive Keyboard Testing Tool" />
+    <meta property="og:description" content="Test and compare different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Features key rollover tests, typing tests, keystroke visualization, and customizable themes." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://keyboard-test.app" />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
@@ -48,8 +57,8 @@
     <meta property="og:locale" content="en_US" />
     <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Keyboard Test - Compare Keyboard Layouts" />
-    <meta name="twitter:description" content="Test and compare different keyboard layouts including QWERTY, Dvorak, and Colemak. Find the perfect keyboard for your typing style." />
+    <meta name="twitter:title" content="Keyboard Test - Interactive Keyboard Testing Tool" />
+    <meta name="twitter:description" content="Test and compare different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Features key rollover tests, typing tests, keystroke visualization, and customizable themes." />
     <meta name="twitter:image" content="%PUBLIC_URL%/og-image.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -66,7 +75,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Keyboard Test - Compare Keyboard Layouts</title>
+    <title>Keyboard Test - Interactive Keyboard Testing Tool</title>
     <link rel="canonical" href="https://keyboard-test.app" />
   </head>
   <body>
