Add Google adsense meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
     <meta name="rating" content="general" />
+    <meta name="google-adsense-account" content="ca-pub-1728229586138721" />
     <!-- Structured data for rich results -->
     <script type="application/ld+json">
       {
