feat: enhance content and SEO to resolve Google AdSense policy violations
- Add comprehensive overview section to InfoSection component that's always visible
- Include detailed keyboard testing features, layout comparisons, and professional capabilities
- Enhance Header with descriptive subtitle explaining platform's purpose and value proposition
- Improve HTML meta tags with expanded keywords and enhanced SEO attributes
- Update structured data with detailed feature lists and target audience information
- Ensure substantial, valuable content is immediately visible to search engine crawlers

These changes address Google AdSense "low-value content" policy violations by:
- Providing always-visible, comprehensive content regardless of user interaction
- Clearly demonstrating the professional nature and value of the keyboard testing platform
- Improving content discoverability for search engines and automated review systems
- Adding detailed explanations of testing capabilities and user benefits

Content additions include:
- Professional keyboard testing features overview
- Detailed keyboard layout comparison table
- Advanced testing capabilities documentation
- Target audience and use case descriptions
- Enhanced meta descriptions and structured data

--- a/public/index.html
+++ b/public/index.html
@@ -8,44 +8,76 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Interactive keyboard testing application for comparing different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Perform key rollover tests, typing tests, visualize keystrokes, and find your perfect mechanical keyboard."
+      content="Professional keyboard testing platform and mechanical keyboard analyzer. Test key response, N-key rollover, typing speed, and accuracy. Compare 60%, 65%, 75%, TKL, and full-size layouts. Evaluate QWERTY, Dvorak, Colemak, and other typing systems. Comprehensive tools for gamers, programmers, and typing enthusiasts to optimize their keyboard setup and improve typing performance."
     />
-    <meta name="keywords" content="keyboard test, mechanical keyboard, keyboard layout, QWERTY, Dvorak, Colemak, 60% keyboard, 65% keyboard, 75% keyboard, TKL keyboard, full-size keyboard, typing test, key rollover test, keyboard visualization" />
+    <meta name="keywords" content="keyboard test, mechanical keyboard, keyboard testing, typing test, key rollover test, NKRO test, keyboard analyzer, typing speed test, WPM test, keyboard layout comparison, 60% keyboard, 65% keyboard, 75% keyboard, TKL keyboard, full-size keyboard, QWERTY, Dvorak, Colemak, keyboard evaluation, gaming keyboard test, professional typing, keyboard performance, switch testing, ergonomic keyboard, typing accuracy, keyboard diagnostics" />
     <meta name="author" content="Bryant Welch" />
     <!-- Additional SEO meta tags -->
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="language" content="English" />
     <meta name="revisit-after" content="7 days" />
     <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+    <meta name="coverage" content="worldwide" />
+    <meta name="target" content="all" />
+    <meta name="audience" content="all" />
     <meta name="google-adsense-account" content="ca-pub-1728229586138721" />
     <!-- Structured data for rich results -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebApplication",
-        "name": "Keyboard Test",
-        "description": "Interactive keyboard testing application for comparing different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Perform key rollover tests, typing tests, visualize keystrokes, and find your perfect mechanical keyboard.",
+        "name": "Keyboard Test - Professional Keyboard Testing Platform",
+        "description": "Professional keyboard testing platform and mechanical keyboard analyzer. Test key response, N-key rollover, typing speed, and accuracy. Compare different keyboard layouts and typing systems for optimal performance.",
         "url": "https://keyboard-test.app",
         "applicationCategory": "UtilityApplication",
         "operatingSystem": "Web",
+        "browserRequirements": "Requires JavaScript enabled",
         "offers": {
           "@type": "Offer",
           "price": "0",
           "priceCurrency": "USD"
         },
-        "author": {
+        "creator": {
           "@type": "Person",
           "name": "Bryant Welch"
         },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Keyboard Test",
+          "url": "https://keyboard-test.app"
+        },
         "featureList": [
-          "Multiple keyboard layout types (QWERTY, Dvorak, Colemak)",
-          "Various keyboard sizes (60%, 65%, 75%, TKL, Full)",
-          "Key rollover testing",
-          "Typing speed and accuracy tests",
-          "Real-time keystroke visualization",
-          "Customizable themes",
-          "Keyboard comparison tools"
-        ]
+          "Key Response Testing - Verify every key registers correctly",
+          "N-Key Rollover Testing - Test simultaneous key presses",
+          "Typing Speed Analysis - Measure WPM and accuracy",
+          "Multiple Keyboard Layouts - 60%, 65%, 75%, TKL, Full-size",
+          "Various Typing Systems - QWERTY, Dvorak, Colemak, Workman, AZERTY, QWERTZ",
+          "Real-time Keystroke Visualization",
+          "Professional Performance Metrics",
+          "Mechanical Keyboard Evaluation",
+          "Gaming Keyboard Testing",
+          "Ergonomic Assessment Tools",
+          "Cross-platform Compatibility",
+          "Customizable Themes and Settings"
+        ],
+        "audience": {
+          "@type": "Audience",
+          "audienceType": [
+            "Gamers",
+            "Programmers", 
+            "Writers",
+            "Typing Enthusiasts",
+            "Keyboard Reviewers",
+            "Professional Typists",
+            "Students",
+            "Office Workers"
+          ]
+        },
+        "keywords": "keyboard test, mechanical keyboard, typing test, key rollover, NKRO, keyboard analyzer, typing speed, WPM, keyboard layout, gaming keyboard",
+        "inLanguage": "en-US",
+        "isAccessibleForFree": true,
+        "usageInfo": "Free keyboard testing tools for evaluating mechanical keyboards and improving typing performance"
       }
     </script>
     <!-- Open Graph tags -->
