--- a/index.html
+++ b/index.html
@@ -1,27 +1,55 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="google-site-verification" content="1IIHQvrvn-tnRwoHw8rkYkEPv6dmhuVGXMNr_sDyaww"/><meta name="theme-color" content="#000000"/><meta name="description" content="Interactive keyboard testing application for comparing different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Perform key rollover tests, typing tests, visualize keystrokes, and find your perfect mechanical keyboard."/><meta name="keywords" content="keyboard test, mechanical keyboard, keyboard layout, QWERTY, Dvorak, Colemak, 60% keyboard, 65% keyboard, 75% keyboard, TKL keyboard, full-size keyboard, typing test, key rollover test, keyboard visualization"/><meta name="author" content="Bryant Welch"/><meta name="robots" content="index, follow"/><meta name="language" content="English"/><meta name="revisit-after" content="7 days"/><meta name="rating" content="general"/><meta name="google-adsense-account" content="ca-pub-1728229586138721"/><script type="application/ld+json">{
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="google-site-verification" content="1IIHQvrvn-tnRwoHw8rkYkEPv6dmhuVGXMNr_sDyaww"/><meta name="theme-color" content="#000000"/><meta name="description" content="Professional keyboard testing platform and mechanical keyboard analyzer. Test key response, N-key rollover, typing speed, and accuracy. Compare 60%, 65%, 75%, TKL, and full-size layouts. Evaluate QWERTY, Dvorak, Colemak, and other typing systems. Comprehensive tools for gamers, programmers, and typing enthusiasts to optimize their keyboard setup and improve typing performance."/><meta name="keywords" content="keyboard test, mechanical keyboard, keyboard testing, typing test, key rollover test, NKRO test, keyboard analyzer, typing speed test, WPM test, keyboard layout comparison, 60% keyboard, 65% keyboard, 75% keyboard, TKL keyboard, full-size keyboard, QWERTY, Dvorak, Colemak, keyboard evaluation, gaming keyboard test, professional typing, keyboard performance, switch testing, ergonomic keyboard, typing accuracy, keyboard diagnostics"/><meta name="author" content="Bryant Welch"/><meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"/><meta name="language" content="English"/><meta name="revisit-after" content="7 days"/><meta name="rating" content="general"/><meta name="distribution" content="global"/><meta name="coverage" content="worldwide"/><meta name="target" content="all"/><meta name="audience" content="all"/><meta name="google-adsense-account" content="ca-pub-1728229586138721"/><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "WebApplication",
-        "name": "Keyboard Test",
-        "description": "Interactive keyboard testing application for comparing different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Perform key rollover tests, typing tests, visualize keystrokes, and find your perfect mechanical keyboard.",
+        "name": "Keyboard Test - Professional Keyboard Testing Platform",
+        "description": "Professional keyboard testing platform and mechanical keyboard analyzer. Test key response, N-key rollover, typing speed, and accuracy. Compare different keyboard layouts and typing systems for optimal performance.",
         "url": "https://keyboard-test.app",
         "applicationCategory": "UtilityApplication",
         "operatingSystem": "Web",
+        "browserRequirements": "Requires JavaScript enabled",
         "offers": {
           "@type": "Offer",
           "price": "0",
           "priceCurrency": "USD"
         },
-        "author": {
+        "creator": {
           "@type": "Person",
           "name": "Bryant Welch"
         },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Keyboard Test",
+          "url": "https://keyboard-test.app"
+        },
         "featureList": [
-          "Multiple keyboard layout types (QWERTY, Dvorak, Colemak)",
-          "Various keyboard sizes (60%, 65%, 75%, TKL, Full)",
-          "Key rollover testing",
-          "Typing speed and accuracy tests",
-          "Real-time keystroke visualization",
-          "Customizable themes",
-          "Keyboard comparison tools"
-        ]
-      }</script><meta property="og:title" content="Keyboard Test - Interactive Keyboard Testing Tool"/><meta property="og:description" content="Test and compare different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Features key rollover tests, typing tests, keystroke visualization, and customizable themes."/><meta property="og:type" content="website"/><meta property="og:url" content="https://keyboard-test.app"/><meta property="og:image" content="/og-image.png"/><meta property="og:site_name" content="Keyboard Test"/><meta property="og:locale" content="en_US"/><meta name="twitter:card" content="summary_large_image"/><meta name="twitter:title" content="Keyboard Test - Interactive Keyboard Testing Tool"/><meta name="twitter:description" content="Test and compare different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Features key rollover tests, typing tests, keystroke visualization, and customizable themes."/><meta name="twitter:image" content="/og-image.png"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Keyboard Test - Interactive Keyboard Testing Tool</title><link rel="canonical" href="https://keyboard-test.app"/><script defer="defer" src="/static/js/main.73814183.js"></script><link href="/static/css/main.dce80da5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+          "Key Response Testing - Verify every key registers correctly",
+          "N-Key Rollover Testing - Test simultaneous key presses",
+          "Typing Speed Analysis - Measure WPM and accuracy",
+          "Multiple Keyboard Layouts - 60%, 65%, 75%, TKL, Full-size",
+          "Various Typing Systems - QWERTY, Dvorak, Colemak, Workman, AZERTY, QWERTZ",
+          "Real-time Keystroke Visualization",
+          "Professional Performance Metrics",
+          "Mechanical Keyboard Evaluation",
+          "Gaming Keyboard Testing",
+          "Ergonomic Assessment Tools",
+          "Cross-platform Compatibility",
+          "Customizable Themes and Settings"
+        ],
+        "audience": {
+          "@type": "Audience",
+          "audienceType": [
+            "Gamers",
+            "Programmers", 
+            "Writers",
+            "Typing Enthusiasts",
+            "Keyboard Reviewers",
+            "Professional Typists",
+            "Students",
+            "Office Workers"
+          ]
+        },
+        "keywords": "keyboard test, mechanical keyboard, typing test, key rollover, NKRO, keyboard analyzer, typing speed, WPM, keyboard layout, gaming keyboard",
+        "inLanguage": "en-US",
+        "isAccessibleForFree": true,
+        "usageInfo": "Free keyboard testing tools for evaluating mechanical keyboards and improving typing performance"
+      }</script><meta property="og:title" content="Keyboard Test - Interactive Keyboard Testing Tool"/><meta property="og:description" content="Test and compare different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Features key rollover tests, typing tests, keystroke visualization, and customizable themes."/><meta property="og:type" content="website"/><meta property="og:url" content="https://keyboard-test.app"/><meta property="og:image" content="/og-image.png"/><meta property="og:site_name" content="Keyboard Test"/><meta property="og:locale" content="en_US"/><meta name="twitter:card" content="summary_large_image"/><meta name="twitter:title" content="Keyboard Test - Interactive Keyboard Testing Tool"/><meta name="twitter:description" content="Test and compare different keyboard layouts (QWERTY, Dvorak, Colemak) and sizes (60%, 65%, 75%, TKL, Full). Features key rollover tests, typing tests, keystroke visualization, and customizable themes."/><meta name="twitter:image" content="/og-image.png"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Keyboard Test - Interactive Keyboard Testing Tool</title><link rel="canonical" href="https://keyboard-test.app"/><script defer="defer" src="/static/js/main.852d7800.js"></script><link href="/static/css/main.dce80da5.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
